external/cimanim/cimanim.h

// ----------------------------------------------------
// Noise Channels - Perlin/Simplex noise for organic movement
// ----------------------------------------------------

// Sample noise at a point (returns value in [-1, 1])
CIMGUI_API float  c_iam_noise_2d(float x, float y, iam_noise_opts* opts);
CIMGUI_API float  c_iam_noise_3d(float x, float y, float z, iam_noise_opts* opts);
// Animated noise channels - continuous noise that evolves over time
CIMGUI_API float  c_iam_noise_channel_float(ImGuiID id, float frequency, float amplitude, iam_noise_opts* opts, float dt);
CIMGUI_API void   c_iam_noise_channel_vec2(ImVec2* pOut, ImGuiID id, ImVec2* frequency, ImVec2* amplitude, iam_noise_opts* opts, float dt);
CIMGUI_API void   c_iam_noise_channel_vec4(ImVec4* pOut, ImGuiID id, ImVec4* frequency, ImVec4* amplitude, iam_noise_opts* opts, float dt);
CIMGUI_API void   c_iam_noise_channel_color(ImVec4* pOut, ImGuiID id, ImVec4* base_color, ImVec4* amplitude, float frequency, iam_noise_opts* opts, int color_space, float dt);
// Convenience: smooth random movement (like wiggle but using noise)
CIMGUI_API float  c_iam_smooth_noise_float(ImGuiID id, float amplitude, float speed, float dt);
CIMGUI_API void   c_iam_smooth_noise_vec2(ImVec2* pOut, ImGuiID id, ImVec2* amplitude, float speed, float dt);
CIMGUI_API void   c_iam_smooth_noise_vec4(ImVec4* pOut, ImGuiID id, ImVec4* amplitude, float speed, float dt);
CIMGUI_API void   c_iam_smooth_noise_color(ImVec4* pOut, ImGuiID id, ImVec4* base_color, ImVec4* amplitude, float speed, int color_space, float dt);
// ----------------------------------------------------
// Style Interpolation - animate between ImGuiStyle themes
// ----------------------------------------------------

// Register a named style for interpolation
CIMGUI_API void   c_iam_style_register(ImGuiID style_id, ImGuiStyle* style);
CIMGUI_API void   c_iam_style_register_current(ImGuiID style_id);
// Blend between two registered styles (result applied to ImGui::GetStyle())
// Uses iam_color_space for color blending mode (iam_col_oklab recommended)
CIMGUI_API void   c_iam_style_blend(ImGuiID style_a, ImGuiID style_b, float t, int color_space);
// Tween between styles over time
CIMGUI_API void   c_iam_style_tween(ImGuiID id, ImGuiID target_style, float duration, iam_ease_desc* ease, int color_space, float dt);
// Get interpolated style without applying
CIMGUI_API void   c_iam_style_blend_to(ImGuiID style_a, ImGuiID style_b, float t, ImGuiStyle* out_style, int color_space);
// Check if a style is registered
CIMGUI_API bool   c_iam_style_exists(ImGuiID style_id);
// Remove a registered style
CIMGUI_API void   c_iam_style_unregister(ImGuiID style_id);
// ----------------------------------------------------
// Gradient Interpolation - animate between color gradients
// ----------------------------------------------------

// Blend between two gradients
CIMGUI_API void   c_iam_gradient_lerp(iam_gradient* pOut, iam_gradient* a, iam_gradient* b, float t, int color_space);
// Tween between gradients over time
CIMGUI_API void   c_iam_tween_gradient(iam_gradient* pOut, ImGuiID id, ImGuiID channel_id, iam_gradient* target, float dur, iam_ease_desc* ez, int policy, int color_space, float dt);
// ----------------------------------------------------
// Transform Interpolation - animate 2D transforms
// ----------------------------------------------------

// Blend between two transforms with rotation interpolation
CIMGUI_API void   c_iam_transform_lerp(iam_transform* pOut, iam_transform* a, iam_transform* b, float t, int rotation_mode);
// Tween between transforms over time
CIMGUI_API void   c_iam_tween_transform(iam_transform* pOut, ImGuiID id, ImGuiID channel_id, iam_transform* target, float dur, iam_ease_desc* ez, int policy, int rotation_mode, float dt);
// Decompose a 3x2 matrix into transform components
CIMGUI_API void   c_iam_transform_from_matrix(iam_transform* pOut, float m00, float m01, float m10, float m11, float tx, float ty);
// Convert transform to 3x2 matrix (row-major: [m00 m01 tx; m10 m11 ty])
CIMGUI_API void   c_iam_transform_to_matrix(iam_transform* t, float* out_matrix);
// ----------------------------------------------------
// iam_clip - fluent API for authoring animations
// ----------------------------------------------------

CIMGUI_API void   c_iam_clip_begin(iam_clip* pOut, ImGuiID clip_id);
// Add keyframes for different channel types
CIMGUI_API void   c_iam_clip_key_float(iam_clip* self, ImGuiID channel, float time, float value, int ease_type, float const* bezier4);
CIMGUI_API void   c_iam_clip_key_vec2(iam_clip* self, ImGuiID channel, float time, ImVec2* value, int ease_type, float const* bezier4);
CIMGUI_API void   c_iam_clip_key_vec4(iam_clip* self, ImGuiID channel, float time, ImVec4* value, int ease_type, float const* bezier4);
CIMGUI_API void   c_iam_clip_key_int(iam_clip* self, ImGuiID channel, float time, int value, int ease_type);
CIMGUI_API void   c_iam_clip_key_color(iam_clip* self, ImGuiID channel, float time, ImVec4* value, int color_space, int ease_type, float const* bezier4);
// Keyframes with repeat variation (value changes per loop iteration)
CIMGUI_API void   c_iam_clip_key_float_var(iam_clip* self, ImGuiID channel, float time, float value, iam_variation_float* var, int ease_type, float const* bezier4);
CIMGUI_API void   c_iam_clip_key_vec2_var(iam_clip* self, ImGuiID channel, float time, ImVec2* value, iam_variation_vec2* var, int ease_type, float const* bezier4);
CIMGUI_API void   c_iam_clip_key_vec4_var(iam_clip* self, ImGuiID channel, float time, ImVec4* value, iam_variation_vec4* var, int ease_type, float const* bezier4);
CIMGUI_API void   c_iam_clip_key_int_var(iam_clip* self, ImGuiID channel, float time, int value, iam_variation_int* var, int ease_type);
CIMGUI_API void   c_iam_clip_key_color_var(iam_clip* self, ImGuiID channel, float time, ImVec4* value, iam_variation_color* var, int color_space, int ease_type, float const* bezier4);
// Spring-based keyframe (float only)
CIMGUI_API void   c_iam_clip_key_float_spring(iam_clip* self, ImGuiID channel, float time, float target, iam_spring_params* spring);
// Anchor-relative keyframes (values resolved relative to window/viewport at get time)
CIMGUI_API void   c_iam_clip_key_float_rel(iam_clip* self, ImGuiID channel, float time, float percent, float px_bias, int anchor_space, int axis, int ease_type, float const* bezier4);
CIMGUI_API void   c_iam_clip_key_vec2_rel(iam_clip* self, ImGuiID channel, float time, ImVec2* percent, ImVec2* px_bias, int anchor_space, int ease_type, float const* bezier4);
CIMGUI_API void   c_iam_clip_key_vec4_rel(iam_clip* self, ImGuiID channel, float time, ImVec4* percent, ImVec4* px_bias, int anchor_space, int ease_type, float const* bezier4);
CIMGUI_API void   c_iam_clip_key_color_rel(iam_clip* self, ImGuiID channel, float time, ImVec4* percent, ImVec4* px_bias, int color_space, int anchor_space, int ease_type, float const* bezier4);
// Timeline grouping - sequential and parallel keyframe blocks
CIMGUI_API void   c_iam_clip_seq_begin(iam_clip* self);
CIMGUI_API void   c_iam_clip_seq_end(iam_clip* self);
CIMGUI_API void   c_iam_clip_par_begin(iam_clip* self);
CIMGUI_API void   c_iam_clip_par_end(iam_clip* self);
// Timeline markers - callbacks at specific times during playback
CIMGUI_API void   c_iam_clip_marker_id(iam_clip* self, float time, ImGuiID marker_id, iam_marker_callback cb, void* user);
CIMGUI_API void   c_iam_clip_marker(iam_clip* self, float time, iam_marker_callback cb, void* user);
// Clip options
CIMGUI_API void   c_iam_clip_set_loop(iam_clip* self, bool loop, int direction, int loop_count);
CIMGUI_API void   c_iam_clip_set_delay(iam_clip* self, float delay_seconds);
CIMGUI_API void   c_iam_clip_set_stagger(iam_clip* self, int count, float each_delay, float from_center_bias);