imgui/Dalamud.Bindings.ImAnim/ImAnimNative.cs


    // ----------------------------------------------------
    // Noise Channels - Perlin/Simplex noise for organic movement
    // ----------------------------------------------------

    // Sample noise at a point (returns value in [-1, 1])

    [LibraryImport(LibName, EntryPoint = "c_iam_noise_2d")]
    public static partial float Noise2D(float x, float y, ImAnimNoiseOpts* opts = null);

    [LibraryImport(LibName, EntryPoint = "c_iam_noise_3d")]
    public static partial float Noise3D(float x, float y, float z, ImAnimNoiseOpts* opts = null);

    // Animated noise channels - continuous noise that evolves over time

    [LibraryImport(LibName, EntryPoint = "c_iam_noise_channel_float")]
    public static partial float NoiseChannelFloat(uint id, float frequency, float amplitude, ImAnimNoiseOpts* opts, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_noise_channel_vec2")]
    public static partial void NoiseChannelVec2(Vector2* pOut, uint id, Vector2* frequency, Vector2* amplitude, ImAnimNoiseOpts* opts, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_noise_channel_vec4")]
    public static partial void NoiseChannelVec4(Vector4* pOut, uint id, Vector4* frequency, Vector4* amplitude, ImAnimNoiseOpts* opts, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_noise_channel_color")]
    public static partial void NoiseChannelColor(Vector4* pOut, uint id, Vector4* baseColor, Vector4* amplitude, float frequency, ImAnimNoiseOpts* opts, ImAnimColorSpace colorSpace, float dt);

    // Convenience: smooth random movement (like wiggle but using noise)

    [LibraryImport(LibName, EntryPoint = "c_iam_smooth_noise_float")]
    public static partial float SmoothNoiseFloat(uint id, float amplitude, float speed, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_smooth_noise_vec2")]
    public static partial void SmoothNoiseVec2(Vector2* pOut, uint id, Vector2* amplitude, float speed, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_smooth_noise_vec4")]
    public static partial void SmoothNoiseVec4(Vector4* pOut, uint id, Vector4* amplitude, float speed, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_smooth_noise_color")]
    public static partial void SmoothNoiseColor(Vector4* pOut, uint id, Vector4* baseColor, Vector4* amplitude, float speed, ImAnimColorSpace colorSpace, float dt);


    // ----------------------------------------------------
    // Style Interpolation - animate between ImGuiStyle themes
    // ----------------------------------------------------

    // Register a named style for interpolation
    [LibraryImport(LibName, EntryPoint = "c_iam_style_register")]
    public static partial void StyleRegister(uint styleId, ImGuiStyle* style);

    [LibraryImport(LibName, EntryPoint = "c_iam_style_register_current")]
    public static partial void StyleRegisterCurrent(uint styleId);

    // Blend between two registered styles (result applied to ImGui::GetStyle())
    // Uses iam_color_space for color blending mode (iam_col_oklab recommended)
    [LibraryImport(LibName, EntryPoint = "c_iam_style_blend")]
    public static partial void StyleBlend(uint styleA, uint styleB, float t, ImAnimColorSpace colorSpace = ImAnimColorSpace.Oklab);

    // Tween between styles over time
    [LibraryImport(LibName, EntryPoint = "c_iam_style_tween")]
    public static partial void StyleTween(uint id, uint targetStyle, float duration, ImAnimEaseDesc* ease, ImAnimColorSpace colorSpace, float dt);

    // Get interpolated style without applying
    [LibraryImport(LibName, EntryPoint = "c_iam_style_blend_to")]
    public static partial void StyleBlendTo(uint styleA, uint styleB, float t, ImGuiStyle* outStyle, ImAnimColorSpace colorSpace = ImAnimColorSpace.Oklab);

    // Check if a style is registered
    [LibraryImport(LibName, EntryPoint = "c_iam_style_exists")]
    public static partial byte StyleExists(uint styleId);

    // Remove a registered style
    [LibraryImport(LibName, EntryPoint = "c_iam_style_unregister")]
    public static partial void StyleUnregister(uint styleId);


    // ----------------------------------------------------
    // Gradient Interpolation - animate between color gradients
    // ----------------------------------------------------

    // Blend between two gradients
    [LibraryImport(LibName, EntryPoint = "c_iam_gradient_lerp")]
    public static partial void GradientLerp(ImAnimGradient* pOut, ImAnimGradient* a, ImAnimGradient* b, float t, ImAnimColorSpace colorSpace = ImAnimColorSpace.Oklab);

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_gradient")]
    public static partial void TweenGradient(ImAnimGradient* pOut, uint id, uint channelId, ImAnimGradient* target, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, ImAnimColorSpace colorSpace, float dt);


    // ----------------------------------------------------
    // Transform Interpolation - animate 2D transforms
    // ----------------------------------------------------

    // Blend between two transforms with rotation interpolation
    [LibraryImport(LibName, EntryPoint = "c_iam_transform_lerp")]
    public static partial void TransformLerp(ImAnimTransform* pOut, ImAnimTransform* a, ImAnimTransform* b, float t, ImAnimRotationMode rotationMode = ImAnimRotationMode.Shortest);

    // Tween between transforms over time
    [LibraryImport(LibName, EntryPoint = "c_iam_tween_transform")]
    public static partial void TweenTransform(ImAnimTransform* pOut, uint id, uint channelId, ImAnimTransform* target, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, int rotationMode, float dt);

    // Decompose a 3x2 matrix into transform components
    [LibraryImport(LibName, EntryPoint = "c_iam_transform_from_matrix")]
    public static partial void TransformFromMatrix(ImAnimTransform* pOut, float m00, float m01, float m10, float m11, float tx, float ty);

    // Convert transform to 3x2 matrix (row-major: [m00 m01 tx; m10 m11 ty])
    [LibraryImport(LibName, EntryPoint = "c_iam_transform_to_matrix")]
    public static partial void TransformToMatrix(ImAnimTransform* t, Matrix3x2* outMatrix);


    // ----------------------------------------------------
    // iam_clip - fluent API for authoring animations
    // ----------------------------------------------------

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_begin")]
    public static partial void ClipBegin(ImAnimClip* pOut, uint clipId);

    // Add keyframes for different channel types

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_key_float")]
    public static partial void ClipKeyFloat(ImAnimClip* self, uint channel, float time, float value, ImAnimEaseType easeType, Vector4* bezier4);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_key_vec2")]
    public static partial void ClipKeyVec2(ImAnimClip* self, uint channel, float time, Vector2* value, ImAnimEaseType easeType, Vector4* bezier4);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_key_vec4")]
    public static partial void ClipKeyVec4(ImAnimClip* self, uint channel, float time, Vector4* value, ImAnimEaseType easeType, Vector4* bezier4);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_key_int")]
    public static partial void ClipKeyInt(ImAnimClip* self, uint channel, float time, int value, ImAnimEaseType easeType);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_key_color")]
    public static partial void ClipKeyColor(ImAnimClip* self, uint channel, float time, Vector4* value, ImAnimColorSpace colorSpace, ImAnimEaseType easeType, Vector4* bezier4);

    // Keyframes with repeat variation (value changes per loop iteration)

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_key_float_var")]
    public static partial void ClipKeyFloatVar(ImAnimClip* self, uint channel, float time, float value, ImAnimVariationFloat* var, ImAnimEaseType easeType, Vector4* bezier4);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_key_vec2_var")]
    public static partial void ClipKeyVec2Var(ImAnimClip* self, uint channel, float time, Vector2* value, ImAnimVariationVec2* var, ImAnimEaseType easeType, Vector4* bezier4);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_key_vec4_var")]
    public static partial void ClipKeyVec4Var(ImAnimClip* self, uint channel, float time, Vector4* value, ImAnimVariationVec4* var, ImAnimEaseType easeType, Vector4* bezier4);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_key_int_var")]
    public static partial void ClipKeyIntVar(ImAnimClip* self, uint channel, float time, int value, ImAnimVariationInt* var, ImAnimEaseType easeType);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_key_color_var")]
    public static partial void ClipKeyColorVar(ImAnimClip* self, uint channel, float time, Vector4* value, ImAnimVariationColor* var, ImAnimColorSpace colorSpace, ImAnimEaseType easeType, Vector4* bezier4);

    // Spring-based keyframe (float only)

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_key_float_spring")]
    public static partial void ClipKeyFloatSpring(ImAnimClip* self, uint channel, float time, float target, ImAnimSpringParams* spring);

    // Anchor-relative keyframes (values resolved relative to window/viewport at get time)

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_key_float_rel")]
    public static partial void ClipKeyFloatRel(ImAnimClip* self, uint channel, float time, float percent, float pxBias, ImAnimAnchorSpace anchorSpace, int axis, ImAnimEaseType easeType, Vector4* bezier4);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_key_vec2_rel")]
    public static partial void ClipKeyVec2Rel(ImAnimClip* self, uint channel, float time, Vector2* percent, Vector2* pxBias, ImAnimAnchorSpace anchorSpace, ImAnimEaseType easeType, Vector4* bezier4);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_key_vec4_rel")]
    public static partial void ClipKeyVec4Rel(ImAnimClip* self, uint channel, float time, Vector4* percent, Vector4* pxBias, ImAnimAnchorSpace anchorSpace, ImAnimEaseType easeType, Vector4* bezier4);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_key_color_rel")]
    public static partial void ClipKeyColorRel(ImAnimClip* self, uint channel, float time, Vector4* percent, Vector4* pxBias, ImAnimColorSpace colorSpace, ImAnimAnchorSpace anchorSpace, ImAnimEaseType easeType, Vector4* bezier4);

    // Timeline grouping - sequential and parallel keyframe blocks

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_seq_begin")]
    public static partial void ClipSeqBegin(ImAnimClip* self);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_seq_end")]
    public static partial void ClipSeqEnd(ImAnimClip* self);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_par_begin")]
    public static partial void ClipParBegin(ImAnimClip* self);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_par_end")]
    public static partial void ClipParEnd(ImAnimClip* self);

    // Timeline markers - callbacks at specific times during playback

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_marker_id")]
    public static partial void ClipMarkerId(ImAnimClip* self, float time, uint markerId, delegate* unmanaged[Cdecl]<uint, uint, float, void*, void> cb, void* userData);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_marker")]
    public static partial void ClipMarker(ImAnimClip* self, float time, delegate* unmanaged[Cdecl]<uint, uint, float, void*, void> cb, void* userData);

    // Clip options

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_set_loop")]
    public static partial void ClipSetLoop(ImAnimClip* self, byte loop, ImAnimDirection direction, int loopCount);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_set_delay")]
    public static partial void ClipSetDelay(ImAnimClip* self, float delaySeconds);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_set_stagger")]
    public static partial void ClipSetStagger(ImAnimClip* self, int count, float eachDelay, float fromCenterBias);
